syntax = "proto3";

package travelingman;

option go_package = "github.com/va6996/travelingman/pb";

import "google/protobuf/timestamp.proto";
import "protos/graph.proto";

message User {
    int64 id = 1;
    string email = 2;
    string password_hash = 3;
    string full_name = 4;
    google.protobuf.Timestamp created_at = 5;
    repeated Passport passports = 6;
    repeated DriversLicense drivers_licenses = 7;
    google.protobuf.Timestamp date_of_birth = 8;
    string gender = 9; // MALE, FEMALE
    string phone = 10;
}

message Passport {
    int64 id = 1;
    int64 user_id = 2;
    string number = 3;
    string issuing_country = 4;
    google.protobuf.Timestamp expiry_date = 5;
    google.protobuf.Timestamp issuance_date = 6;
    string nationality = 7;
    string birth_place = 8;
    string issuance_location = 9;
}

message DriversLicense {
    int64 id = 1;
    int64 user_id = 2;
    string number = 3;
    string issuing_country = 4;
    google.protobuf.Timestamp expiry_date = 5;
}

message TravelGroup {
    int64 group_id = 1;
    string name = 2;
    int64 organizer_id = 3;
    string destination = 4;
    google.protobuf.Timestamp travel_date = 5;
    repeated User members = 6;
    repeated Itinerary itinerary = 7;
}
